--- a/package.json
+++ b/package.json
@@ -19,30 +19,33 @@
   },
   "homepage": "https://github.com/VBulanyi/news-explorer-frontend/",
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^5.0.2",
-    "gh-pages": "~2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss-loader": "^3.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
+    "babel-loader": "8.0.6",
+    "css-loader": "3.2.0",
+    "eslint": "6.4.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "file-loader": "4.2.0",
+    "gh-pages": "2.1.1",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "5.0.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path": "0.12.7",
+    "postcss-loader": "3.0.0",
+    "webpack": "4.39.3",
+    "webpack-cli": "3.3.7",
+    "webpack-dev-server": "3.8.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.1.4",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "path": "^0.12.7",
-    "swiper": "^5.2.1"
+    "autoprefixer": "9.6.1",
+    "babel-polyfill": "6.26.0",
+    "core-js": "3.1.4",
+    "cssnano": "4.1.10",
+    "swiper": "5.2.1",
+    "validator": "11.1.0"
   }
 }
