--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --mode development --open --watch",
-    "deploy": "gh-pages -d dist"
+    "deploy-gh": "gh-pages -d dist",
+    "deploy": "scp -r ./dist/* jetbul@84.201.161.216:/home/jetbul/news-explorer-frontend"
   },
   "repository": {
     "type": "git",
@@ -34,18 +35,18 @@
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "path": "0.12.7",
-    "postcss-loader": "3.0.0",
+    "postcss-loader": "^3.0.0",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "autoprefixer": "9.6.1",
     "babel-polyfill": "6.26.0",
     "core-js": "3.1.4",
-    "cssnano": "4.1.10",
     "swiper": "5.2.1",
-    "validator": "11.1.0"
+    "validator": "11.1.0",
+    "autoprefixer": "^9.7.3",
+    "cssnano": "^4.1.10"
   }
 }
