--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "dev": "webpack-dev-server --mode development --open --watch",
     "deploy-gh": "gh-pages -d dist",
     "deploy": "scp -r ./dist/* jetbul@84.201.161.216:/home/jetbul/news-explorer-frontend"
-
-
   },
   "repository": {
     "type": "git",
@@ -37,7 +35,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "path": "0.12.7",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "3.0.0",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0",
@@ -48,7 +46,7 @@
     "core-js": "3.1.4",
     "swiper": "5.2.1",
     "validator": "11.1.0",
-    "autoprefixer": "^9.7.3",
-    "cssnano": "^4.1.10"
+    "autoprefixer": "9.7.3",
+    "cssnano": "4.1.10"
   }
 }
