--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --mode development --open --watch",
     "deploy-gh": "gh-pages -d dist",
-    "deploy": "scp -r ./dist/* jetbul@84.201.161.216:/home/jetbul/news-explorer-frontend"
+    "deploy-yan": "scp -r ./dist/* jetbul@84.201.161.216:/home/jetbul/news-explorer-frontend"
   },
   "repository": {
     "type": "git",
