--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "rimraf dist && webpack --mode production",
     "dev": "webpack-dev-server --mode development --open --watch",
-    "deploy-gh": "gh-pages -d dist",
-    "deploy-yan": "scp -r ./dist/* jetbul@84.201.161.216:/home/jetbul/news-explorer-frontend"
+    "deploy-gh": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
